# car_list

./: .dockerignore  .env-prototype  Dockerfile  README.md  cars.csv  docker-compose.yaml  entrypoint.sh  load_csv_data.py  pyproject.toml  test.db
.github/workflows/: build.yml  test.yml
alembic/: env.py
alembic/versions/: 53eb113f013a_car_mark_model_unique.py  9bb38d7b4207_initial_migration.py  c6c4ca114554_load_car_data_from_csv.py  f6e124e4392e_add_users.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/api/: endpoints.py
app/auth/: auth.py
app/core/: config.py  logging_config.py
tests/: test_endpoints.py
